tests/prsl/fixtures/valid/comments.prsl
(* top-level comment *)
begin-record
record commented {
  (* a comment between fields *)
  content : "has comments";
  retention-policy : permanent; (* trailing comment *)
  temporal-metadata {
    created-at : "2024-03-03T03:03:03Z";
  };
}
end-record
---
