tests/prsl/fixtures/invalid/unknown-field.prsl
begin-record
record unknown-field {
  content : "x";
  temporal-metadata {
    created-at : "2024-01-01T00:00:00Z";
    not-a-field : "oops";
  };
}
end-record
---
